@@ -32,6 +32,7 @@ Noel O'Boyle
 Detlev Offenbach
 JT Olds
 George Paci
+Peter Portante
 Catherine Proulx
 Brandon Rhodes
 Adi Roiban
